[package]
name = "mrvillage-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
include_dir = "0.7"
thiserror = "1.0"
tempfile = "3.3"
xshell = "0.2"
ssh2 = "0.9"
toml = "0.5"
toml_edit = "0.15"
dirs = "4.0"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[[bin]]
name = "mrvillage"
path = "src/main.rs"
