[package]
name = "mrvillage-cli"
version = "0.1.1"
edition = "2021"
include = ["/templates", "/src"]
description = "My personal CLI"
license = "MIT"
repository = "https://github.com/mrvillage/mrvillage-cli"
documentation = "https://docs.rs/mrvillage-cli"

[dependencies]
anyhow = "1.0"
include_dir = "0.7"
tempfile = "3.3"
xshell = "0.2"
toml = "0.5"
dirs = "4.0"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[[bin]]
name = "mrvillage"
path = "src/main.rs"
